clusters/gryffindor-prod/apps/network/envoy-gateway/external/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-external
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    envoyProxy:
      name: eg-external
  addresses:
    - type: IPAddress
      value: 10.100.90.85
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.schwarz47.at"
      tls:
        certificateRefs:
          - kind: Secret
            name: schwarz47-at-tls
